--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bshaffer/oauth2-server-httpfoundation-bridge",
+    "name": "wirelane/oauth2-server-httpfoundation-bridge",
     "description":"A bridge to HttpFoundation for oauth2-server-php",
     "keywords":["oauth","oauth2","auth","httpfoundation"],
     "type":"library",
@@ -14,10 +14,17 @@
     "homepage": "http://github.com/bshaffer/oauth2-server-httpfoundation-bridge",
     "require":{
         "php":">=7.2.0",
-        "wirelane/oauth2-server-php": "dev-fix_set-status-code",
+        "wirelane/oauth2-server-php": "2.0.*",
         "symfony/http-foundation": ">=5.0"
     },
     "autoload": {
         "psr-0": { "OAuth2\\HttpFoundationBridge": "src/" }
-    }
+    },
+    "minimum-stability": "dev",
+    "repositories": [
+        {
+            "type": "git",
+            "url": "ssh://git@github.com/wirelane/oauth2-server-php.git"
+        }
+    ]
 }
