--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "homepage": "http://github.com/bshaffer/oauth2-server-httpfoundation-bridge",
     "require":{
         "php":">=7.2.0",
-        "wirelane/oauth2-server-php": "2.0.*",
+        "wirelane/oauth2-server-php": "dev-fix_set-status-code",
         "symfony/http-foundation": "4.*"
     },
     "autoload": {
