--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,12 @@
     "homepage": "http://github.com/bshaffer/oauth2-server-httpfoundation-bridge",
     "require":{
         "php":">=7.2.0",
-        "wirelane/oauth2-server-php": "dev-fix_set-status-code",
+        "wirelane/oauth2-server-php": "^2.0",
         "symfony/http-foundation": "4.*"
     },
     "autoload": {
         "psr-0": { "OAuth2\\HttpFoundationBridge": "src/" }
     },
-    "minimum-stability": "dev",
     "repositories": [
         {
             "type": "git",
